slick js 추가 서비스품질>공지사항관리, sms관리, 서류양식관리 추가

--- a/guide/list.html
+++ b/guide/list.html
@@ -525,8 +525,8 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start">08-25</td>
-                    <td class="date_end">08-25</td>
+                    <td class="date_start">08-26</td>
+                    <td class="date_end">08-26</td>
                     <td class="state" data-state="ing"></td>
                     <td>퀵메뉴 있음</td>
                 </tr>
@@ -623,7 +623,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02계약</td>
                     <td class="d2">05고객차단관리</td>
                     <td class="d3">02대량등록</td>
@@ -633,7 +633,7 @@
                     <td class="ex_end">08-23</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg), 파일업로드</td>
                 </tr>
                 <tr class="">
@@ -774,8 +774,8 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-25</td>
                     <td class="ex_end">08-25</td>
-                    <td class="date_start">08-25</td>
-                    <td class="date_end">08-25</td>
+                    <td class="date_start">08-26</td>
+                    <td class="date_end">08-26</td>
                     <td class="state" data-state="ing"></td>
                     <td>popup(md), 테이블 체크 확인</td>
                 </tr>
@@ -1000,7 +1000,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(320)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">04공지사항관리</td>
                     <td class="d3">03등록수정</td>
@@ -1010,10 +1010,10 @@
                     <td class="ex_end">08-26</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 첨부파일추가</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">01발송</td>
@@ -1023,7 +1023,7 @@
                     <td class="ex_end">08-26</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -1052,7 +1052,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(sm), 파일첨부</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">02메세지설정</td>
@@ -1062,10 +1062,10 @@
                     <td class="ex_end">08-26</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
-                    <td>popup(lg)</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(lg), tooltip in grid</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">03발송현황</td>
@@ -1075,7 +1075,7 @@
                     <td class="ex_end">08-27</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -1112,8 +1112,8 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start">08-25</td>
-                    <td class="date_end">08-25</td>
+                    <td class="date_start">08-26</td>
+                    <td class="date_end">08-26</td>
                     <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
@@ -1125,8 +1125,8 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start">08-25</td>
-                    <td class="date_end">08-25</td>
+                    <td class="date_start">08-26</td>
+                    <td class="date_end">08-26</td>
                     <td class="state" data-state="ing"></td>
                     <td>파일 업로드</td>
                 </tr>
@@ -1156,7 +1156,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">07서류양식관리</td>
                     <td class="d3">02상세</td>
@@ -1166,10 +1166,10 @@
                     <td class="ex_end">08-27</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">07서류양식관리</td>
                     <td class="d3">03등록수정</td>
@@ -1179,7 +1179,7 @@
                     <td class="ex_end">08-27</td>
                     <td class="date_start">08-25</td>
                     <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 첨부파일추가</td>
                 </tr>
                 <tr class="">
@@ -1208,7 +1208,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">10동의자료확인</td>
                     <td class="d3">01조회</td>
@@ -1216,9 +1216,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-30</td>
                     <td class="ex_end">08-30</td>
-                    <td class="date_start">08-25</td>
-                    <td class="date_end">08-25</td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-26</td>
+                    <td class="date_end">08-26</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
             </tbody>
