--- a/pages/SA/SA071001.html
+++ b/pages/SA/SA071001.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Document</title>
+    <link rel="stylesheet" href="../../resources/lib/slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" href="../../resources/css/index.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">공지사항 관리</h2>
+                            <h2 class="main-title">동의자료확인</h2>
                             <span class="h-ico lg tip ml-8"
                                 title="툴팁 메세지 입니다."
                                 data-role="tooltip"
@@ -37,7 +38,7 @@
                                 data-navigational=true,
                                 data-items='[
                             { type:"rootitem", href: "", text: "서비스품질", showText: true },
-                            { type:"item", href: "", text: "요청사항 관리", showText: true}
+                            { type:"item", href: "", text: "동의자료확인", showText: true}
                          ]'/>
                         </div>
                     </div>
@@ -45,54 +46,143 @@
 
                 <!-- Contents Body -->
                 <div class="contents-body">
-                    <div class="table-group">
-                        <div class="search-control">
-                            <div class="form-group">
-                                <span class="label">검색항목</span>
-                                <div class="form-set">
-                                    <select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
-                                        <option value="1">온라인</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                    <div class="input-set search lg">
-                                        <input type="text" class="h-input" placeholder="입력해주세요">
+                    <div class="table-group half">
+                        <div class="table-set">
+                            <div class="title-box md mt-0">
+                                <h2 class="sub-title dot">동의자료 조회</h2>
+                            </div>
+                            <div class="search-control control-3 mt-0">
+                                <div class="form-group">
+                                    <span class="label">등록일</span>
+                                    <div class="form-set">
+                                        <input data-role="datepicker" 
+                                        data-format="yyyy/MM/dd"
+                                        placeholder="yyyymmdd" 
+                                        data-culture="ko-KR"
+                                        data-footer="false"
+                                        class="datepicker" /> 
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <span class="label">정상여부</span>
+                                    <div class="form-set">
+                                        <select data-role="dropdownlist" data-value="전체" data-option-label="전체">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="label">점검항목</span>
+                                    <div class="form-set">
+                                        <select data-role="dropdownlist" data-value="전체" data-option-label="전체">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="label">동의유형</span>
+                                    <div class="form-set">
+                                        <select data-role="dropdownlist" data-value="전체" data-option-label="전체">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="label">CMS유형</span>
+                                    <div class="form-set">
+                                        <select data-role="dropdownlist" data-value="전체" data-option-label="전체">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                
+                                <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                             </div>
-                            <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
-                        </div>
-                        <div class="table-set">
-                            <div class="title-box sm">
-                                <div class="left-group">
+                        
+                            <script type="text/x-kendo-template" class="toolbarTemplate">
+                                <div class="title-box sm">
                                     <span class="amount-set">
-                                        <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                                        <span class="amount">26</span><span class="unit">건</span>
+                                        <span class="amount current">1</span><span class="unit">건</span>
                                     </span>
                                 </div>
-                                <div class="right-group">
-                                    <div class="btn-box">
-                                        <button data-role="button">요청사항등록</button>
-                                        <button data-role="button" class="green">엑셀</button>
-                                    </div>
+                            </script>
+                            <script type="text/x-kendo-template" class="checkboxTemplate">
+                                <div class="h-checkbox no-label">
+                                    <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                                    <label for="checkbox-nolabel"></label> 
+                                </div>
+                            </script>
+                            <div class="table-content grid">
+                                <div data-role="grid" 
+                                    data-sortable="true" 
+                                    data-editable="true" 
+                                    data-columns='[
+                                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
+                                    { "field": "고객사ID", "width": 120, "attributes" : {"class": "text-center"}  },
+                                    { "field": "고객사명", "width": 120, "attributes" : {"class": "text-center"}  },
+                                    { "field": "회원번호", "width": 120, "attributes" : {"class": "text-center"}  },
+                                    { "field": "동의유형", "width": 100, "attributes" : {"class": "text-center"}  },
+                                    { "field": "정상여부", "width": 100, "attributes" : {"class": "text-center"}  },
+                                    { "field": "점검항목", "width": 100, "attributes" : {"class": "text-center"}  },
+                                    { "field": "CMS유형", "width": 100, "attributes" : {"class": "text-center"}  },
+                                    ]' 
+                                    data-bind="source: gridSource"
+                                    data-toolbar="#=toolbarTemplate()#">
                                 </div>
                             </div>
-                            <div class="table-content grid">
-                                <div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
-                                    { "field": "N", "width": 50 },
-                                    { "field": "NO", "width": 50 },
-                                    { "field": "상품코드", "width": 90 },
-                                    { "field": "상품명", "width": 170 },
-                                    { "field": "어플리케이션", "width": 146 },
-                                    { "field": "표준가격", "width": 140 },
-                                    { "field": "최소가격", "width": 146 },
-                                    { "field": "승인상태", "width": 140 },
-                                    { "field": "사용가능업종", "width": 140 },
-                                    { "field": "등록일", "width": 120 },
-                                    { "field": "종료일", "width": 120 }
-                                ]' data-bind="source: gridSource">
+                        </div>
+                        <div class="table-set">
+                            <div class="title-box md mt-0">
+                                <h2 class="sub-title dot">동의자료 상세보기</h2>
+                            </div>
+                            <div class="table-box">
+                                <div class="search-group">
+                                    <div class="form-group">
+                                        <div class="form-set">
+                                            <div data-role="buttongroup" class="period"
+                                            data-index="0">
+                                                <button data-role="button"><span>정상처리</span></button>
+                                                <button data-role="button"><span>이상처리</span></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group flex-1">
+                                        <span class="label">점검내용</span>
+                                        <div class="form-set">
+                                            <input type="text" class="h-input" placeholder="입력해주세요"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <span class="label">처리유형</span>
+                                        <div class="form-set">
+                                            <select data-role="dropdownlist" data-value="비정상 자료 처리" data-option-label="비정상 자료 처리" class="md">
+                                                <option value="1">온라인</option>
+                                                <option value="2">오프라인</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="table-bottom">
-                                    <button data-role="button" class="gray-border">삭제</button>
+                                <div class="title-box md mt-20">
+                                    <span class="badge square gray">
+                                        <span class="label has-bar">NO.</span>
+                                        <span class="desc">1</span>
+                                        <span class="label has-bar">업체아이디</span>
+                                        <span class="desc">wizcms00</span>
+                                        <span class="label has-bar">회원번호</span>  
+                                        <span class="desc">000001</span>
+                                    </span>
+                                    <div class="btn-box">
+                                        <button data-role="button" class="gray-border" data-icon="rotate-left"><span>회전</span></button>
+                                        <button data-role="button" class="gray-border" data-icon="rotate-right"><span>회전</span></button>
+                                    </div>
+                                </div>
+                                <div class="slider-wrap mt-8">
+                                    <div><img src="https://source.unsplash.com/random/800x400?sig=1" /></div>
+                                    <div><img src="https://source.unsplash.com/random/800x400?sig=2" /></div>
                                 </div>
                             </div>
                         </div>
@@ -107,20 +197,33 @@
     <!-- Default Script Include -->
     <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2014.1.528/js/cultures/kendo.culture.ko-KR.min.js"></script>
+    <script src="../../resources/lib/slick-1.8.1/slick/slick.js"></script>
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
     <script>
             var viewModel = kendo.observable({
                 gridSource: [
-                    { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
-                    { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
-                    { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+                    { "NO":"1",  "고객사ID":"고객사ID","고객사명":"고객사명", "회원번호":"00001567","동의유형":"서면","정상여부":"대기","점검항목":"-","CMS유형":"CMS"},
+                    { "NO":"2",  "고객사ID":"고객사ID","고객사명":"고객사명", "회원번호":"00001567","동의유형":"서면","정상여부":"대기","점검항목":"-","CMS유형":"CMS"},
+                    { "NO":"3",  "고객사ID":"고객사ID","고객사명":"고객사명", "회원번호":"00001567","동의유형":"서면","정상여부":"대기","점검항목":"-","CMS유형":"CMS"}
                 ],
                 displayGridSource: function() {
                     return stringify(this.get("gridSource").toJSON());
                 },
             });
             kendo.bind($(".wrap"), viewModel);
+            function toolbarTemplate() {
+                var template = kendo.template($('.toolbarTemplate').html());
+                var result = template({});
+                return result
+            }
+            function checkboxTemplate() {
+                var template = kendo.template($('.checkboxTemplate').html());
+                var result = template({});
+                return result
+            }
+            $('.slider-wrap').slick();
+
     </script>
 </body>
 
